<resources>
    <string name="app_name">Run tracker</string>
    <string name="runs_label">Runs</string>
    <string name="graphs_label">Graph</string>
    <string name="start_run">Start run</string>
    <string name="edit">Edit</string>
    <string name="distance_value">%.2f km</string>
    <string name="distance">Distance</string>
    <string name="pace_value">%1d\'%1d\"</string>
    <string name="pace_value_null">-\'--\"</string>
    <string name="pace">Pace</string>
    <string name="time_value">%02d:%02d</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="edit_run">Edit run</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rationale_dialog_title">Attention!</string>
    <string name="location_permission_explanation">The application needs to access your location to track your run.</string>
    <string name="exit">Exit</string>
    <string name="proceed">Proceed</string>
    <string name="session">Session</string>
    <string name="notification_description">Run is in session.</string>
    <string name="running">Running</string>
    <string name="delete">Delete</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_rationale_title">Permission needed!</string>
    <string name="location_permission_never_ask_again">Please grant location permission through settings to start a run!</string>
    <string name="end_run_title">End run?</string>
    <string name="end_run_message">Are you sure you want to end your run?</string>
    <string name="discard_run_message">Are you sure you want to discard your run?</string>
    <string name="discard_run_title">Discard run?</string>
    <string name="notification_values">%2s - %.2f km</string>
</resources>