<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_value"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_pace_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pace_value"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_pace_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pace"
        android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pace_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_value" />

    </LinearLayout>

</LinearLayout>