<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    tools:context=".activities.RunSessionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/layout_runsession_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_value"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/value_size" />

            <TextView
                android:id="@+id/tv_distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/label_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_pace_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pace_value"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/value_size" />

            <TextView
                android:id="@+id/tv_pace_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pace"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/label_size" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_time"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="?attr/colorSecondary"
        app:cornerRadius="25dp"
        app:icon="@drawable/ic_stop"
        app:iconGravity="textStart"
        app:iconSize="50dp"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Chronometer
        android:id="@+id/cm_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotocondensed_regular"
        android:textAlignment="center"
        android:textSize="90sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm_time" />

</androidx.constraintlayout.widget.ConstraintLayout>